# aqua-parser

./: .gitignore  Makefile  README.md  pyproject.toml  pyproject.toml.default  setup.cfg
aqua/: __init__.py  __main__.py  config.py  parser.py  schemas.py
aqua/parsers/: parser.py  title_parser.py  toc_parser.py
aquaparser/: __init__.py  __main__.py
aquaparser/parsers/: parser.py
