[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aqua"
authors = []
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "description"]
dependencies = [
    "pydantic >=1.9.0",
    "pdfplumber >=0.6.0",
    "typer >=0.4.0"
]
requires-python = ">=3.7.0"

[project.urls]
Source = "https://github.com/pdf-reports-parser/aqua-parser"

[project.optional-dependencies]
dev = [
    "mypy>=0.910,<1",
    "wemake_python_styleguide>=0.15.3,<1",
    "bandit ==1.7.2",
]
